--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "mdContactList",
+  "name": "helloWorld",
   "version": "0.0.0",
   "authors": [
     "Unknown <unknown@unknown.com>"
@@ -13,9 +13,9 @@
     "tests"
   ],
   "dependencies": {
-    "angular-material": "~0.6.1",
-    "angular": "~1.3.8",
-    "angular-route": "~1.3.8",
-    "angular-mocks": "~1.3.8"
+    "angular-material": "^1.1.0",
+    "angular": "~1.5.3",
+    "angular-route": "~1.5.3",
+    "angular-mocks": "~1.5.3"
   }
 }
