--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,16 +1,6 @@
 {
-  "compilerOptions": {
-		"target": "es5",
-		"module": "amd",
-		"out": "app.js",
-		"sourceMap": true
-	},
 	"exclude": [
 		"node_modules",
-		"bower_components",
-		"typings/tsd.d.ts"
-	],
-	"files": [
-		"src/app/app.ts"
+		"bower_components"
 	]
 }
